codes/sql-parsing/sql-parser-full/sql-parser.output
Terminals unused in grammar

    ADD
    ALTER
    ANALYZE
    BEFORE
    CALL
    CASCADE
    CHANGE
    CHECK
    COLUMN
    CONDITION
    CONSTRAINT
    CONTINUE
    CONVERT
    CURRENT_USER
    CURSOR
    DATABASES
    DECLARE
    DESCRIBE
    DETERMINISTIC
    DIV
    DROP
    DUAL
    EACH
    ELSEIF
    EXIT
    EXPLAIN
    FETCH
    FOREIGN
    GRANT
    INFILE
    INOUT
    INSENSITIVE
    ITERATE
    KEYS
    KILL
    LEAVE
    LINES
    LOAD
    LOCALTIME
    LOCALTIMESTAMP
    LOCK
    LONG
    LOOP
    MATCH
    MINUTE_MICROSECOND
    MINUTE_SECOND
    MODIFIES
    NO_WRITE_TO_BINLOG
    NUMBER
    OPTIMIZE
    OPTION
    OPTIONALLY
    OUT
    OUTFILE
    PRECISION
    PROCEDURE
    PURGE
    READ
    READS
    REFERENCES
    RELEASE
    RENAME
    REPEAT
    REQUIRE
    RESTRICT
    RETURN
    REVOKE
    SCHEMAS
    SECOND_MICROSECOND
    SENSITIVE
    SEPARATOR
    SHOW
    SONAME
    SPATIAL
    SPECIFIC
    SQL
    SQLEXCEPTION
    SQLSTATE
    SQLWARNING
    SSL
    STARTING
    TERMINATED
    TO
    TRIGGER
    UNDO
    UNION
    UNLOCK
    USAGE
    UTC_DATE
    UTC_TIME
    UTC_TIMESTAMP
    VARYING
    WHILE
    WRITE
    ESCAPED


State 126 conflicts: 1 shift/reduce


Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 expr: NAME
    4     | NAME '.' NAME
    5     | USERVAR
    6     | STRING
    7     | INTNUM
    8     | APPROXNUM
    9     | BOOL
   10     | expr '+' expr
   11     | expr '-' expr
   12     | expr '*' expr
   13     | expr '/' expr
   14     | expr '%' expr
   15     | expr MOD expr
   16     | '-' expr
   17     | expr ANDOP expr
   18     | expr OR expr
   19     | expr XOR expr
   20     | expr '|' expr
   21     | expr '&' expr
   22     | expr '^' expr
   23     | expr SHIFT expr
   24     | NOT expr
   25     | '!' expr
   26     | expr COMPARISON expr
   27     | '(' expr ')'
   28     | expr COMPARISON '(' select_stmt ')'
   29     | expr COMPARISON ANY '(' select_stmt ')'
   30     | expr COMPARISON SOME '(' select_stmt ')'
   31     | expr COMPARISON ALL '(' select_stmt ')'
   32     | expr IS NULLX
   33     | expr IS NOT NULLX
   34     | expr IS BOOL
   35     | expr IS NOT BOOL
   36     | USERVAR ASSIGN expr
   37     | expr BETWEEN expr AND expr

   38 val_list: expr
   39         | expr ',' val_list

   40 opt_val_list: ε
   41             | val_list

   42 expr: expr IN '(' val_list ')'
   43     | expr NOT IN '(' val_list ')'
   44     | expr IN '(' select_stmt ')'
   45     | expr NOT IN '(' select_stmt ')'
   46     | EXISTS '(' select_stmt ')'
   47     | NAME '(' opt_val_list ')'
   48     | FCOUNT '(' '*' ')'
   49     | FCOUNT '(' expr ')'
   50     | FSUBSTRING '(' val_list ')'
   51     | FSUBSTRING '(' expr FROM expr ')'
   52     | FSUBSTRING '(' expr FROM expr FOR expr ')'
   53     | FTRIM '(' val_list ')'
   54     | FTRIM '(' trim_ltb expr FROM val_list ')'

   55 trim_ltb: LEADING
   56         | TRAILING
   57         | BOTH

   58 expr: FDATE_ADD '(' expr ',' interval_exp ')'
   59     | FDATE_SUB '(' expr ',' interval_exp ')'

   60 interval_exp: INTERVAL expr DAY_HOUR
   61             | INTERVAL expr DAY_MICROSECOND
   62             | INTERVAL expr DAY_MINUTE
   63             | INTERVAL expr DAY_SECOND
   64             | INTERVAL expr YEAR_MONTH
   65             | INTERVAL expr YEAR
   66             | INTERVAL expr HOUR_MICROSECOND
   67             | INTERVAL expr HOUR_MINUTE
   68             | INTERVAL expr HOUR_SECOND

   69 expr: CASE expr case_list END
   70     | CASE expr case_list ELSE expr END
   71     | CASE case_list END
   72     | CASE case_list ELSE expr END

   73 case_list: WHEN expr THEN expr
   74          | case_list WHEN expr THEN expr

   75 expr: expr LIKE expr
   76     | expr NOT LIKE expr
   77     | expr REGEXP expr
   78     | expr NOT REGEXP expr
   79     | CURRENT_TIMESTAMP
   80     | CURRENT_DATE
   81     | CURRENT_TIME
   82     | BINARY expr

   83 stmt: select_stmt

   84 select_stmt: SELECT select_opts select_expr_list
   85            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

   86 opt_where: ε
   87          | WHERE expr

   88 opt_groupby: ε
   89            | GROUP BY groupby_list opt_with_rollup

   90 groupby_list: expr opt_asc_desc
   91             | groupby_list ',' expr opt_asc_desc

   92 opt_asc_desc: ε
   93             | ASC
   94             | DESC

   95 opt_with_rollup: ε
   96                | WITH ROLLUP

   97 opt_having: ε
   98           | HAVING expr

   99 opt_orderby: ε
  100            | ORDER BY groupby_list

  101 opt_limit: ε
  102          | LIMIT expr
  103          | LIMIT expr ',' expr

  104 opt_into_list: ε
  105              | INTO column_list

  106 column_list: NAME
  107            | column_list ',' NAME

  108 select_opts: ε
  109            | select_opts ALL
  110            | select_opts DISTINCT
  111            | select_opts DISTINCTROW
  112            | select_opts HIGH_PRIORITY
  113            | select_opts STRAIGHT_JOIN
  114            | select_opts SQL_SMALL_RESULT
  115            | select_opts SQL_BIG_RESULT
  116            | select_opts SQL_CALC_FOUND_ROWS

  117 select_expr_list: select_expr
  118                 | select_expr_list ',' select_expr
  119                 | '*'
  120                 | '(' select_expr_list ')'

  121 select_expr: expr opt_as_alias

  122 opt_as_alias: AS NAME
  123             | NAME
  124             | ε

  125 table_references: table_reference
  126                 | table_references ',' table_reference

  127 table_reference: table_factor
  128                | join_table

  129 table_factor: NAME opt_as_alias index_hint
  130             | NAME '.' NAME opt_as_alias index_hint
  131             | table_subquery opt_as NAME
  132             | '(' table_references ')'

  133 opt_as: AS
  134       | ε

  135 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
  136           | table_reference STRAIGHT_JOIN table_factor
  137           | table_reference STRAIGHT_JOIN table_factor ON expr
  138           | table_reference left_or_right opt_outer JOIN table_factor join_condition
  139           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

  140 opt_inner_cross: ε
  141                | INNER
  142                | CROSS

  143 opt_outer: ε
  144          | OUTER

  145 left_or_right: LEFT
  146              | RIGHT

  147 opt_left_or_right_outer: LEFT opt_outer
  148                        | RIGHT opt_outer
  149                        | ε

  150 opt_join_condition: ε
  151                   | join_condition

  152 join_condition: ON expr
  153               | USING '(' column_list ')'

  154 index_hint: USE KEY opt_for_join '(' index_list ')'
  155           | IGNORE KEY opt_for_join '(' index_list ')'
  156           | FORCE KEY opt_for_join '(' index_list ')'
  157           | ε

  158 opt_for_join: FOR JOIN
  159             | ε

  160 index_list: NAME
  161           | index_list ',' NAME

  162 table_subquery: '(' select_stmt ')'

  163 stmt: delete_stmt

  164 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

  165 delete_opts: delete_opts LOW_PRIORITY
  166            | delete_opts QUICK
  167            | delete_opts IGNORE
  168            | ε

  169 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

  170 delete_list: NAME opt_dot_star
  171            | delete_list ',' NAME opt_dot_star

  172 opt_dot_star: ε
  173             | '.' '*'

  174 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

  175 stmt: insert_stmt

  176 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

  177 opt_ondupupdate: ε
  178                | ONDUPLICATE KEY UPDATE insert_asgn_list

  179 insert_opts: ε
  180            | insert_opts LOW_PRIORITY
  181            | insert_opts DELAYED
  182            | insert_opts HIGH_PRIORITY
  183            | insert_opts IGNORE

  184 opt_into: INTO
  185         | ε

  186 opt_col_names: ε
  187              | '(' column_list ')'

  188 insert_vals_list: '(' insert_vals ')'
  189                 | insert_vals_list ',' '(' insert_vals ')'

  190 insert_vals: expr
  191            | DEFAULT
  192            | insert_vals ',' expr
  193            | insert_vals ',' DEFAULT

  194 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate

  195 insert_asgn_list: NAME COMPARISON expr
  196                 | NAME COMPARISON DEFAULT
  197                 | insert_asgn_list ',' NAME COMPARISON expr
  198                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  199 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  200 stmt: replace_stmt

  201 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  202             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  203             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  204 stmt: update_stmt

  205 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  206 update_opts: ε
  207            | insert_opts LOW_PRIORITY
  208            | insert_opts IGNORE

  209 update_asgn_list: NAME COMPARISON expr
  210                 | NAME '.' NAME COMPARISON expr
  211                 | update_asgn_list ',' NAME COMPARISON expr
  212                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  213 stmt: create_database_stmt

  214 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  215                     | CREATE SCHEMA opt_if_not_exists NAME

  216 opt_if_not_exists: ε
  217                  | IF EXISTS

  218 stmt: create_table_stmt

  219 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  220                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  221                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  222                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  223                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  224                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  225 opt_temporary: ε
  226              | TEMPORARY

  227 create_col_list: create_definition
  228                | create_col_list ',' create_definition

  229 create_definition: PRIMARY KEY '(' column_list ')'
  230                  | KEY '(' column_list ')'
  231                  | INDEX '(' column_list ')'
  232                  | FULLTEXT INDEX '(' column_list ')'
  233                  | FULLTEXT KEY '(' column_list ')'

  234 $@1: ε

  235 create_definition: $@1 NAME data_type column_atts

  236 column_atts: ε
  237            | column_atts NOT NULLX
  238            | column_atts NULLX
  239            | column_atts DEFAULT STRING
  240            | column_atts DEFAULT INTNUM
  241            | column_atts DEFAULT APPROXNUM
  242            | column_atts DEFAULT BOOL
  243            | column_atts AUTO_INCREMENT
  244            | column_atts UNIQUE '(' column_list ')'
  245            | column_atts UNIQUE KEY
  246            | column_atts PRIMARY KEY
  247            | column_atts KEY
  248            | column_atts COMMENT STRING

  249 opt_length: ε
  250           | '(' INTNUM ')'
  251           | '(' INTNUM ',' INTNUM ')'

  252 opt_binary: ε
  253           | BINARY

  254 opt_uz: ε
  255       | opt_uz UNSIGNED
  256       | opt_uz ZEROFILL

  257 opt_csc: ε
  258        | opt_csc CHAR SET STRING
  259        | opt_csc COLLATE STRING

  260 data_type: BIT opt_length
  261          | TINYINT opt_length opt_uz
  262          | SMALLINT opt_length opt_uz
  263          | MEDIUMINT opt_length opt_uz
  264          | INT opt_length opt_uz
  265          | INTEGER opt_length opt_uz
  266          | BIGINT opt_length opt_uz
  267          | REAL opt_length opt_uz
  268          | DOUBLE opt_length opt_uz
  269          | FLOAT opt_length opt_uz
  270          | DECIMAL opt_length opt_uz
  271          | DATE
  272          | TIME
  273          | TIMESTAMP
  274          | DATETIME
  275          | YEAR
  276          | CHAR opt_length opt_csc
  277          | VARCHAR '(' INTNUM ')' opt_csc
  278          | BINARY opt_length
  279          | VARBINARY '(' INTNUM ')'
  280          | TINYBLOB
  281          | BLOB
  282          | MEDIUMBLOB
  283          | LONGBLOB
  284          | TINYTEXT opt_binary opt_csc
  285          | TEXT opt_binary opt_csc
  286          | MEDIUMTEXT opt_binary opt_csc
  287          | LONGTEXT opt_binary opt_csc
  288          | ENUM '(' enum_list ')' opt_csc
  289          | SET '(' enum_list ')' opt_csc

  290 enum_list: STRING
  291          | enum_list ',' STRING

  292 create_select_statement: opt_ignore_replace opt_as select_stmt

  293 opt_ignore_replace: ε
  294                   | IGNORE
  295                   | REPLACE

  296 stmt: set_stmt

  297 set_stmt: SET set_list

  298 set_list: set_expr
  299         | set_list ',' set_expr

  300 set_expr: USERVAR COMPARISON expr
  301         | USERVAR ASSIGN expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 25
    '%' (37) 14
    '&' (38) 21
    '(' (40) 27 28 29 30 31 42 43 44 45 46 47 48 49 50 51 52 53 54 58 59 120 132 153 154 155 156 162 187 188 189 219 220 221 223 229 230 231 232 233 244 250 251 277 279 288 289
    ')' (41) 27 28 29 30 31 42 43 44 45 46 47 48 49 50 51 52 53 54 58 59 120 132 153 154 155 156 162 187 188 189 219 220 221 223 229 230 231 232 233 244 250 251 277 279 288 289
    '*' (42) 12 48 119 173
    '+' (43) 10
    ',' (44) 39 58 59 91 103 107 118 126 161 171 189 192 193 197 198 211 212 228 251 291 299
    '-' (45) 11 16
    '.' (46) 4 130 173 210 212 220 223 224
    '/' (47) 13
    ';' (59) 1 2
    '^' (94) 22
    '|' (124) 20
    error (256)
    NAME <strval> (258) 3 4 47 106 107 122 123 129 130 131 160 161 164 170 171 176 194 195 196 197 198 199 201 202 203 209 210 211 212 214 215 219 220 221 222 223 224 235
    STRING <strval> (259) 6 239 248 258 259 290 291
    INTNUM <intval> (260) 7 240 250 251 277 279
    BOOL <intval> (261) 9 34 35 242
    APPROXNUM <floatval> (262) 8 241
    USERVAR <strval> (263) 5 36 300 301
    ASSIGN (264) 36 301
    OR (265) 18
    XOR (266) 19
    ANDOP (267) 17
    IN (268) 42 43 44 45
    IS (269) 32 33 34 35
    LIKE (270) 75 76
    REGEXP (271) 77 78
    NOT (272) 24 33 35 43 45 76 78 237
    BETWEEN (273) 37
    COMPARISON <subtok> (274) 26 28 29 30 31 195 196 197 198 209 210 211 212 300
    SHIFT <subtok> (275) 23
    MOD (276) 15
    UMINUS (277)
    ADD (278)
    ALL (279) 31 109
    ALTER (280)
    ANALYZE (281)
    AND (282) 37
    ANY (283) 29
    AS (284) 122 133
    ASC (285) 93
    AUTO_INCREMENT (286) 243
    BEFORE (287)
    BIGINT (288) 266
    BINARY (289) 82 253 278
    BIT (290) 260
    BLOB (291) 281
    BOTH (292) 57
    BY (293) 89 100
    CALL (294)
    CASCADE (295)
    CASE (296) 69 70 71 72
    CHANGE (297)
    CHAR (298) 258 276
    CHECK (299)
    COLLATE (300) 259
    COLUMN (301)
    COMMENT (302) 248
    CONDITION (303)
    CONSTRAINT (304)
    CONTINUE (305)
    CONVERT (306)
    CREATE (307) 214 215 219 220 221 222 223 224
    CROSS (308) 142
    CURRENT_DATE (309) 80
    CURRENT_TIME (310) 81
    CURRENT_TIMESTAMP (311) 79
    CURRENT_USER (312)
    CURSOR (313)
    DATABASE (314) 214
    DATABASES (315)
    DATE (316) 271
    DATETIME (317) 274
    DAY_HOUR (318) 60
    DAY_MICROSECOND (319) 61
    DAY_MINUTE (320) 62
    DAY_SECOND (321) 63
    DECIMAL (322) 270
    DECLARE (323)
    DEFAULT (324) 191 193 196 198 239 240 241 242
    DELAYED (325) 181
    DELETE (326) 164 169 174
    DESC (327) 94
    DESCRIBE (328)
    DETERMINISTIC (329)
    DISTINCT (330) 110
    DISTINCTROW (331) 111
    DIV (332)
    DOUBLE (333) 268
    DROP (334)
    DUAL (335)
    EACH (336)
    ELSE (337) 70 72
    ELSEIF (338)
    END (339) 69 70 71 72
    ENUM (340) 288
    EXIT (341)
    EXPLAIN (342)
    FETCH (343)
    FLOAT (344) 269
    FOR (345) 52 158
    FORCE (346) 156
    FOREIGN (347)
    FROM (348) 51 52 54 85 164 169 174
    FULLTEXT (349) 232 233
    GRANT (350)
    GROUP (351) 89
    HAVING (352) 98
    HIGH_PRIORITY (353) 112 182
    HOUR_MICROSECOND (354) 66
    HOUR_MINUTE (355) 67
    HOUR_SECOND (356) 68
    IF (357) 217
    IGNORE (358) 155 167 183 208 294
    INFILE (359)
    INDEX (360) 231 232
    INNER (361) 141
    INOUT (362)
    INSENSITIVE (363)
    INSERT (364) 176 194 199
    INT (365) 264
    INTEGER (366) 265
    INTERVAL (367) 60 61 62 63 64 65 66 67 68
    INTO (368) 105 184
    ITERATE (369)
    JOIN (370) 135 138 139 158
    KEY (371) 154 155 156 178 229 230 233 245 246 247
    KEYS (372)
    KILL (373)
    LEADING (374) 55
    LEAVE (375)
    LEFT (376) 145 147
    LIMIT (377) 102 103
    LINES (378)
    LOAD (379)
    LOCALTIME (380)
    LOCALTIMESTAMP (381)
    LOCK (382)
    LONG (383)
    LONGBLOB (384) 283
    LONGTEXT (385) 287
    LOOP (386)
    LOW_PRIORITY (387) 165 180 207
    MATCH (388)
    MEDIUMBLOB (389) 282
    MEDIUMINT (390) 263
    MEDIUMTEXT (391) 286
    MINUTE_MICROSECOND (392)
    MINUTE_SECOND (393)
    MODIFIES (394)
    NATURAL (395) 139
    NO_WRITE_TO_BINLOG (396)
    NULLX (397) 32 33 237 238
    NUMBER (398)
    ON (399) 137 152
    ONDUPLICATE (400) 178
    OPTIMIZE (401)
    OPTION (402)
    OPTIONALLY (403)
    ORDER (404) 100
    OUT (405)
    OUTER (406) 144
    OUTFILE (407)
    PRECISION (408)
    PRIMARY (409) 229 246
    PROCEDURE (410)
    PURGE (411)
    QUICK (412) 166
    READ (413)
    READS (414)
    REAL (415) 267
    REFERENCES (416)
    RELEASE (417)
    RENAME (418)
    REPEAT (419)
    REPLACE (420) 201 202 203 295
    REQUIRE (421)
    RESTRICT (422)
    RETURN (423)
    REVOKE (424)
    RIGHT (425) 146 148
    ROLLUP (426) 96
    SCHEMA (427) 215
    SCHEMAS (428)
    SECOND_MICROSECOND (429)
    SELECT (430) 84 85
    SENSITIVE (431)
    SEPARATOR (432)
    SET (433) 194 202 205 258 289 297
    SHOW (434)
    SMALLINT (435) 262
    SOME (436) 30
    SONAME (437)
    SPATIAL (438)
    SPECIFIC (439)
    SQL (440)
    SQLEXCEPTION (441)
    SQLSTATE (442)
    SQLWARNING (443)
    SQL_BIG_RESULT (444) 115
    SQL_CALC_FOUND_ROWS (445) 116
    SQL_SMALL_RESULT (446) 114
    SSL (447)
    STARTING (448)
    STRAIGHT_JOIN (449) 113 136 137
    TABLE (450) 219 220 221 222 223 224
    TEMPORARY (451) 226
    TERMINATED (452)
    TEXT (453) 285
    THEN (454) 73 74
    TIME (455) 272
    TIMESTAMP (456) 273
    TINYBLOB (457) 280
    TINYINT (458) 261
    TINYTEXT (459) 284
    TO (460)
    TRAILING (461) 56
    TRIGGER (462)
    UNDO (463)
    UNION (464)
    UNIQUE (465) 244 245
    UNLOCK (466)
    UNSIGNED (467) 255
    UPDATE (468) 178 205
    USAGE (469)
    USE (470) 154
    USING (471) 153 174
    UTC_DATE (472)
    UTC_TIME (473)
    UTC_TIMESTAMP (474)
    VALUES (475) 176 201
    VARBINARY (476) 279
    VARCHAR (477) 277
    VARYING (478)
    WHEN (479) 73 74
    WHERE (480) 87
    WHILE (481)
    WITH (482) 96
    WRITE (483)
    YEAR (484) 65 275
    YEAR_MONTH (485) 64
    ZEROFILL (486) 256
    ESCAPED (487)
    EXISTS <subtok> (488) 46 217
    FSUBSTRING (489) 50 51 52
    FTRIM (490) 53 54
    FDATE_ADD (491) 58
    FDATE_SUB (492) 59
    FCOUNT (493) 48 49


Nonterminals, with rules where they appear

    $accept (253)
        on left: 0
    stmt_list (254)
        on left: 1 2
        on right: 0 2
    expr (255)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 42 43 44 45 46 47 48 49 50 51 52 53 54 58 59 69 70 71 72 75 76 77 78 79 80 81 82
        on right: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 42 43 44 45 49 51 52 54 58 59 60 61 62 63 64 65 66 67 68 69 70 72 73 74 75 76 77 78 82 87 90 91 98 102 103 121 137 152 190 192 195 197 209 210 211 212 300 301
    val_list <intval> (256)
        on left: 38 39
        on right: 39 41 42 43 50 53 54
    opt_val_list <intval> (257)
        on left: 40 41
        on right: 47
    trim_ltb (258)
        on left: 55 56 57
        on right: 54
    interval_exp (259)
        on left: 60 61 62 63 64 65 66 67 68
        on right: 58 59
    case_list <intval> (260)
        on left: 73 74
        on right: 69 70 71 72 74
    stmt (261)
        on left: 83 163 175 200 204 213 218 296
        on right: 1 2
    select_stmt (262)
        on left: 84 85
        on right: 28 29 30 31 44 45 46 83 162 199 203 292
    opt_where (263)
        on left: 86 87
        on right: 85 164 169 174 205
    opt_groupby (264)
        on left: 88 89
        on right: 85
    groupby_list <intval> (265)
        on left: 90 91
        on right: 89 91 100
    opt_asc_desc <intval> (266)
        on left: 92 93 94
        on right: 90 91
    opt_with_rollup <intval> (267)
        on left: 95 96
        on right: 89
    opt_having (268)
        on left: 97 98
        on right: 85
    opt_orderby (269)
        on left: 99 100
        on right: 85 164 205
    opt_limit (270)
        on left: 101 102 103
        on right: 85 164 205
    opt_into_list (271)
        on left: 104 105
        on right: 85
    column_list <intval> (272)
        on left: 106 107
        on right: 105 107 153 187 229 230 231 232 233 244
    select_opts <intval> (273)
        on left: 108 109 110 111 112 113 114 115 116
        on right: 84 85 109 110 111 112 113 114 115 116
    select_expr_list <intval> (274)
        on left: 117 118 119 120
        on right: 84 85 118 120
    select_expr (275)
        on left: 121
        on right: 117 118
    opt_as_alias (276)
        on left: 122 123 124
        on right: 121 129 130
    table_references <intval> (277)
        on left: 125 126
        on right: 85 126 132 169 174 205
    table_reference (278)
        on left: 127 128
        on right: 125 126 135 136 137 138 139
    table_factor (279)
        on left: 129 130 131 132
        on right: 127 135 136 137 138 139
    opt_as (280)
        on left: 133 134
        on right: 131 292
    join_table (281)
        on left: 135 136 137 138 139
        on right: 128
    opt_inner_cross <intval> (282)
        on left: 140 141 142
        on right: 135
    opt_outer <intval> (283)
        on left: 143 144
        on right: 138 147 148
    left_or_right <intval> (284)
        on left: 145 146
        on right: 138
    opt_left_or_right_outer <intval> (285)
        on left: 147 148 149
        on right: 139
    opt_join_condition (286)
        on left: 150 151
        on right: 135
    join_condition (287)
        on left: 152 153
        on right: 138 151
    index_hint (288)
        on left: 154 155 156 157
        on right: 129 130
    opt_for_join <intval> (289)
        on left: 158 159
        on right: 154 155 156
    index_list <intval> (290)
        on left: 160 161
        on right: 154 155 156 161
    table_subquery (291)
        on left: 162
        on right: 131
    delete_stmt (292)
        on left: 164 169 174
        on right: 163
    delete_opts <intval> (293)
        on left: 165 166 167 168
        on right: 164 165 166 167 169 174
    delete_list <intval> (294)
        on left: 170 171
        on right: 169 171 174
    opt_dot_star (295)
        on left: 172 173
        on right: 170 171
    insert_stmt (296)
        on left: 176 194 199
        on right: 175
    opt_ondupupdate (297)
        on left: 177 178
        on right: 176 194 199 201 202 203
    insert_opts <intval> (298)
        on left: 179 180 181 182 183
        on right: 176 180 181 182 183 194 199 201 202 203 207 208
    opt_into (299)
        on left: 184 185
        on right: 176 194 199 201 202 203
    opt_col_names (300)
        on left: 186 187
        on right: 176 199 201 203
    insert_vals_list <intval> (301)
        on left: 188 189
        on right: 176 189 201
    insert_vals <intval> (302)
        on left: 190 191 192 193
        on right: 188 189 192 193
    insert_asgn_list <intval> (303)
        on left: 195 196 197 198
        on right: 178 194 197 198 202
    replace_stmt (304)
        on left: 201 202 203
        on right: 200
    update_stmt (305)
        on left: 205
        on right: 204
    update_opts <intval> (306)
        on left: 206 207 208
        on right: 205
    update_asgn_list <intval> (307)
        on left: 209 210 211 212
        on right: 205 211 212
    create_database_stmt (308)
        on left: 214 215
        on right: 213
    opt_if_not_exists <intval> (309)
        on left: 216 217
        on right: 214 215 219 220 221 222 223 224
    create_table_stmt (310)
        on left: 219 220 221 222 223 224
        on right: 218
    opt_temporary <intval> (311)
        on left: 225 226
        on right: 219 220 221 222 223 224
    create_col_list <intval> (312)
        on left: 227 228
        on right: 219 220 221 223 228
    create_definition (313)
        on left: 229 230 231 232 233 235
        on right: 227 228
    $@1 (314)
        on left: 234
        on right: 235
    column_atts <intval> (315)
        on left: 236 237 238 239 240 241 242 243 244 245 246 247 248
        on right: 235 237 238 239 240 241 242 243 244 245 246 247 248
    opt_length <intval> (316)
        on left: 249 250 251
        on right: 260 261 262 263 264 265 266 267 268 269 270 276 278
    opt_binary <intval> (317)
        on left: 252 253
        on right: 284 285 286 287
    opt_uz <intval> (318)
        on left: 254 255 256
        on right: 255 256 261 262 263 264 265 266 267 268 269 270
    opt_csc (319)
        on left: 257 258 259
        on right: 258 259 276 277 284 285 286 287 288 289
    data_type <intval> (320)
        on left: 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274 275 276 277 278 279 280 281 282 283 284 285 286 287 288 289
        on right: 235
    enum_list <intval> (321)
        on left: 290 291
        on right: 288 289 291
    create_select_statement (322)
        on left: 292
        on right: 221 222 223 224
    opt_ignore_replace <intval> (323)
        on left: 293 294 295
        on right: 292
    set_stmt (324)
        on left: 297
        on right: 296
    set_list (325)
        on left: 298 299
        on right: 297 299
    set_expr (326)
        on left: 300 301
        on right: 298 299


State 0

    0 $accept: • stmt_list $end

    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt_list             go to state 8
    stmt                  go to state 9
    select_stmt           go to state 10
    delete_stmt           go to state 11
    insert_stmt           go to state 12
    replace_stmt          go to state 13
    update_stmt           go to state 14
    create_database_stmt  go to state 15
    create_table_stmt     go to state 16
    set_stmt              go to state 17


State 1

  214 create_database_stmt: CREATE • DATABASE opt_if_not_exists NAME
  215                     | CREATE • SCHEMA opt_if_not_exists NAME
  219 create_table_stmt: CREATE • opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  220                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  221                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  222                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  223                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  224                  | CREATE • opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    DATABASE   shift, and go to state 18
    SCHEMA     shift, and go to state 19
    TEMPORARY  shift, and go to state 20

    $default  reduce using rule 225 (opt_temporary)

    opt_temporary  go to state 21


State 2

  164 delete_stmt: DELETE • delete_opts FROM NAME opt_where opt_orderby opt_limit
  169            | DELETE • delete_opts delete_list FROM table_references opt_where
  174            | DELETE • delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 168 (delete_opts)

    delete_opts  go to state 22


State 3

  176 insert_stmt: INSERT • insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  194            | INSERT • insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  199            | INSERT • insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 179 (insert_opts)

    insert_opts  go to state 23


State 4

  201 replace_stmt: REPLACE • insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  202             | REPLACE • insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  203             | REPLACE • insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 179 (insert_opts)

    insert_opts  go to state 24


State 5

   84 select_stmt: SELECT • select_opts select_expr_list
   85            | SELECT • select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    $default  reduce using rule 108 (select_opts)

    select_opts  go to state 25


State 6

  297 set_stmt: SET • set_list

    USERVAR  shift, and go to state 26

    set_list  go to state 27
    set_expr  go to state 28


State 7

  205 update_stmt: UPDATE • update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

    NAME      reduce using rule 206 (update_opts)
    '('       reduce using rule 206 (update_opts)
    $default  reduce using rule 179 (insert_opts)

    insert_opts  go to state 29
    update_opts  go to state 30


State 8

    0 $accept: stmt_list • $end
    2 stmt_list: stmt_list • stmt ';'

    $end     shift, and go to state 31
    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt                  go to state 32
    select_stmt           go to state 10
    delete_stmt           go to state 11
    insert_stmt           go to state 12
    replace_stmt          go to state 13
    update_stmt           go to state 14
    create_database_stmt  go to state 15
    create_table_stmt     go to state 16
    set_stmt              go to state 17


State 9

    1 stmt_list: stmt • ';'

    ';'  shift, and go to state 33

